k8s/nginx-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      component: naveenmraja-nginx
  template:
    metadata:
      labels:
        component: naveenmraja-nginx
    spec:
      containers:
        - name: naveenmraja-nginx
          image: naveenmraja/naveenmraja-nginx:1.1
          ports:
            - containerPort: 80
