k8s/ingress-service.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: 'nginx'
    cert-manager.io/cluster-issuer: 'letsencrypt-prod'
    nginx.ingress.kubernetes.io/ssl-redirect: 'true'
spec:
  tls:
    - hosts:
        - naveenmraja.in
        - www.naveenmraja.in
      secretName: naveenmraja-in
  rules:
    - host: naveenmraja.in
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx-cluster-ip-service
                port:
                  number: 80
    - host: www.naveenmraja.in
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx-cluster-ip-service
                port:
                  number: 80
